[metadata]
name = tardis_star
author = Kerzendorf + TARDIS collaboration
author_email = wkerzendorf@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://NA-justyet.com
description = TARDIS for Stellar Spectroscopy
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = tardis-sn/tardis_star

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
tardis_star = data/*

[tool:pytest]
testpaths = "tardis_star" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    tardis_star/_astropy_init*
    tardis_star/conftest.py
    tardis_star/*setup_package*
    tardis_star/tests/*
    tardis_star/*/tests/*
    tardis_star/extern/*
    tardis_star/version*
    */tardis_star/_astropy_init*
    */tardis_star/conftest.py
    */tardis_star/*setup_package*
    */tardis_star/tests/*
    */tardis_star/*/tests/*
    */tardis_star/extern/*
    */tardis_star/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
